--- a/styles.css
+++ b/styles.css
@@ -29,19 +29,19 @@ footer{
 }
 
 .item1{
-    background-color: aqua;
+    background-color: rgb(58, 126, 126);
     text-align: center;
     width: 70%;
 }
 
 .item2{
-    background-color: aqua;
+    background-color: rgb(58, 126, 126);
     text-align: center;
     width: 70%;
 }
 
 .item3{
-    background-color: aqua;
+    background-color: rgb(58, 126, 126);
     text-align: center;
     width: 70%;
 }
